--- a/comments.html
+++ b/comments.html
@@ -97,10 +97,19 @@
         <p class="text-body">To keep the site from feeling overcrowded as well as avoiding too much contrast (feels bad on the eyes), the colour palette was kept small - to 4 colours to be exact. These colours being:</p>
 
         <ul id="colours-list">
-            <li><span id="main-background">&#9632;</span>   <b>Main Background</b> - Dark Slate  </li>
-            <li><span id="secondary-background">&#9632;</span>   <b>Secondary Background</b> - Deep Matte Grey</li>
-            <li><span id="main-text">&#9632;</span> <b>Main Text</b> - Silver Fox </li>
-            <li><b>Secondary Text</b> - Are ya yellow?!   <span id="secondary-text">&#9632;</span></li>
+            <li><span id="main-background">&#9632;</span><b>Main Background</b> - Dark Slate  </li>
+            <li><span id="secondary-background">&#9632;</span><b>Secondary Background</b> - Deep Matte Grey</li>
+            <li><span id="main-text">&#9632;</span><b>Main Text</b> - Silver Fox </li>
+            <li><span id="secondary-text">&#9632;</span><b>Secondary Text</b> - Are ya yellow?!   </li>
+        </ul>
+
+        <p class="text-body">So why these colours? Well other than the fact I have no deisgn skills, I wanted firstly to have a nice dark background, dark slate was a good choice for this. Following this I had an idea of a sort of "container box". This is the box you are reading in now, I felt like it was a good idea for such a basic looking site. A good choice for the background of this "box" was the Deep Matte Grey, slightly lighter than the dark slate but still with a nice feel to it. Now onto the text, I played around with a couple colours for a bit, but nothing felt right. Then I went to white, 
+            and it looked better than the others but still wasn't to my liking. So I did the thing all web devs do best which is googling stuff - "what colour reads well on grey", the answer I got. Silver. Finally, I had to choose the secondary text colour. I went through a series of trials, red, green, blue, purple, pink, but everything seemed off. I finally arrived at yellow, and thought it fit the retro theme well.</p>
+
+
+        <h4 class="timeline-heading">Key Aesthetic Descions I made: </h4>
+        <ul>
+            <li>Making the navbar elements change colour as they are hovered. - This provides a sense of reactivity for users</li>
         </ul>
     </div>
     
