--- a/comments.html
+++ b/comments.html
@@ -30,7 +30,7 @@
         </div>
 
         <p class="text-body">
-        Now that the file structure has been layed out. Its time to talk a bit about the page structure itself. Below is a table of all my main CSS classes and ids and styles
+        Now that the file structure has been layed out. Its time to talk a bit about the page structure itself. Below is a table of all my main CSS classes & ids, and their respective purpose.
         </p>
 
         <div id="table-container">
@@ -103,13 +103,17 @@
             <li><span id="secondary-text">&#9632;</span><b>Secondary Text</b> - Are ya yellow?!   </li>
         </ul>
 
-        <p class="text-body">So why these colours? Well other than the fact I have no deisgn skills, I wanted firstly to have a nice dark background, dark slate was a good choice for this. Following this I had an idea of a sort of "container box". This is the box you are reading in now, I felt like it was a good idea for such a basic looking site. A good choice for the background of this "box" was the Deep Matte Grey, slightly lighter than the dark slate but still with a nice feel to it. Now onto the text, I played around with a couple colours for a bit, but nothing felt right. Then I went to white, 
+        <p class="text-body">So why these colours? Well other than the fact I have no deisgn skills, I wanted firstly to have a nice dark background, dark slate was a good choice for this. Following this I had an idea of a sort of "container box". This is the box you are reading in now, a good choice for the background of this "box" was the Deep Matte Grey, slightly lighter than the dark slate but still with a nice feel to it. Now onto the text, I played around with a couple colours for a bit, but nothing felt right. Then I went to white, 
             and it looked better than the others but still wasn't to my liking. So I did the thing all web devs do best which is googling stuff - "what colour reads well on grey", the answer I got. Silver. Finally, I had to choose the secondary text colour. I went through a series of trials, red, green, blue, purple, pink, but everything seemed off. I finally arrived at yellow, and thought it fit the retro theme well.</p>
 
 
         <h4 class="timeline-heading">Key Aesthetic Descions I made: </h4>
         <ul>
-            <li>Making the navbar elements change colour as they are hovered. - This provides a sense of reactivity for users</li>
+            <li>Making the navbar elements change colour as they are hovered. - This provides a sense of reactivity for users. </li>
+            <li>Choosing to have a content box (the one you are reading in now). Many old blog sites had these so I thought it would fit the retro theme.</li>
+            <li>Choosing the font - <a class="in-text-link" target="_blank" href="https://www.dafont.com/gameplay.font">"Gameplay"</a>  for the title. This gave it a sort of arcade vibe, aligning with the retro theme.</li>
+            <li>Styling the table with the <b>border-collapse</b> property so you get single lines instead of double lines. This aligns with the minamalistic approach.</li>
+            <li>Coming up with the "timeline" feature on the Past page. This delivered the content in a streamlined, simple and easy to read manner.</li>
         </ul>
     </div>
     
