--- a/past.html
+++ b/past.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="body-container">
         <h3 class="sub-heading">My Past</h3>
-        <p class="text-body">So this is the page where I talk a bit about my past and my expirence with computing.</p>
+        <p class="text-body">So this is the page where I talk a bit about my past and my experience with computing.</p>
 
         <h4 class="timeline-heading">2015</h4>
         <p class="text-body">Got into a class called Games Design during Year 8. This involved learning various game design philosphies as well as learning to use <a class="in-text-link" target="_blank" href="https://en.wikipedia.org/wiki/Scratch_(programming_language)">Scratch</a>
@@ -55,7 +55,7 @@
 
         <h4 class="timeline-heading">2020 - Present</h4>
         <p class="text-body">
-            I got a job as a Full Stack Developer at <a class="in-text-link" target="_blank" href="https://www.saasyan.com.au/">Saasyan</a>. Just been working on projects there - mainly with VueJs, NodeJS, Python and MySQL.
+            I got a job as a (very) Junior Full Stack Developer at <a class="in-text-link" target="_blank" href="https://www.saasyan.com.au/">Saasyan</a>. Just been working on projects there - mainly with VueJs, NodeJS, Python and MySQL.
             </p>
     </div>
     
